--- a/reactnet.client/package.json
+++ b/reactnet.client/package.json
@@ -20,7 +20,9 @@
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.3",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.5",
     "zustand": "^5.0.4"
   },
